--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -62,7 +62,7 @@ podTemplate(yaml: readTrusted('pod.yaml')) {
  stage('Artefact ') {                        
            container('buildah'){
                             sh "cd /home/jenkins/agent/workspace/${env.JOB_BASE_NAME}"
-                            sh "buildah build   -t web-app:latest ."
+                            sh "buildah build --layers=true  -t web-app:latest ."
 
                             
 
