--- a/pod.yaml
+++ b/pod.yaml
@@ -1,5 +1,9 @@
 apiVersion: v1
 kind: Pod
+metadata: 
+  annotations: 
+      container.apparmor.security.beta.kubernetes.io/buildah: unconfined
+      container.apparmor.security.beta.kubernetes.io/skopeo: unconfined
 spec:
   volumes:
     - name: buildah-vol
@@ -18,16 +22,16 @@ spec:
     image: quay.io/buildah/stable:latest
     securityContext:
        capabilities:
-         add:
-           - "SYS_ADMIN"
-           - "MKNOD"
-           - "SYS_CHROOT"
-           - "SETFCAP"
-    resources:
-          limits:
-            smarter-devices/fuse: 1
-          requests:
-            smarter-devices/fuse: 1
+         add: ["CAP-SYS_ADMIN"]
+       seLinuxOptions:
+         level: disable
+       
+
+    #resources:
+    #      limits:
+    #        smarter-devices/fuse: 1
+    #      requests:
+    #        smarter-devices/fuse: 1
     volumeMounts:
         - mountPath: "/var/lib/containers:Z"
           name: buildah-vol
@@ -39,16 +43,14 @@ spec:
     image: quay.io/skopeo/stable:latest
     securityContext:
        capabilities:
-         add:
-           - "SYS_ADMIN"
-           - "MKNOD"
-           - "SYS_CHROOT"
-           - "SETFCAP"
-    resources:
-          limits:
-            smarter-devices/fuse: 1
-          requests:
-            smarter-devices/fuse: 1
+         add: ["CAP-SYS_ADMIN"]
+       seLinuxOptions:
+         level: disable
+   # resources:
+   #       limits:
+   #         smarter-devices/fuse: 1
+   #       requests:
+   #         smarter-devices/fuse: 1
     volumeMounts:
         - mountPath: "/var/lib/containers:Z"
           name: buildah-vol
