--- a/pod.yaml
+++ b/pod.yaml
@@ -27,11 +27,11 @@ spec:
          level: disable
        
 
-    #resources:
-    #      limits:
-    #        smarter-devices/fuse: 1
-    #      requests:
-    #        smarter-devices/fuse: 1
+    resources:
+          limits:
+            smarter-devices/fuse: 1
+          requests:
+            smarter-devices/fuse: 1
     volumeMounts:
         - mountPath: "/var/lib/containers:Z"
           name: buildah-vol
