--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -55,6 +55,7 @@ podTemplate(yaml: readTrusted('pod.yaml')) {
   node(POD_LABEL) {
   environment {
             CI = 'true'
+            dockerhub=credentials('dockerhub')
                 }
   stage ('Git'){
             git url: 'https://github.com/younes-bami/node.git', branch: 'master'
@@ -62,15 +63,15 @@ podTemplate(yaml: readTrusted('pod.yaml')) {
  stage('Artefact ') {                        
            container('buildah'){
                             sh "cd /home/jenkins/agent/workspace/${env.JOB_BASE_NAME}"
-                            sh "buildah build --layers=true  -t web-app:latest ."
-
+           //                 sh "buildah build --layers=true  -t web-app:latest ."
+      
                             
 
                              }
       
           container('skopeo'){
                           sh "skopeo inspect containers-storage:localhost/web-app:latest"
-                          sh "skopeo copy --dest-creds younesic:Dh123581321* containers-storage:localhost/web-app:latest docker://docker.io/younesic/web-app "
+                          sh "skopeo copy --dest-creds $dockerhub_USR:$dockerhub_PWD containers-storage:localhost/web-app:latest docker://docker.io/younesic/web-app "
 
     
     }  
