--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -55,7 +55,7 @@ podTemplate(yaml: readTrusted('pod.yaml')) {
   node(POD_LABEL) {
   environment {
             CI = 'true'
-            dockerhub = credentials('dockerhub')
+            dockerhub=credentials('dockerhub')
                 }
   //stage ('Git'){
   //          git url: 'https://github.com/younes-bami/node.git', branch: 'master'
@@ -65,7 +65,7 @@ podTemplate(yaml: readTrusted('pod.yaml')) {
                             git url: 'https://github.com/younes-bami/node.git', branch: 'master'
 
                             sh "cd /home/jenkins/agent/workspace/${env.JOB_BASE_NAME}"
-                            sh "buildah build --layers=true  -t web-app:latest ."
+                            //sh "buildah build --layers=true  -t web-app:latest ."
       
                             
 
@@ -73,7 +73,7 @@ podTemplate(yaml: readTrusted('pod.yaml')) {
       
           container('skopeo'){
                           sh "skopeo inspect containers-storage:localhost/web-app:latest"
-                          sh "skopeo copy --dest-creds $dockerhub_USR:$dockerhub_PSW containers-storage:localhost/web-app:latest docker://docker.io/younesic/web-app "
+                          sh "skopeo copy --dest-creds ${dockerhub_USR}:${dockerhub_PSW} containers-storage:localhost/web-app:latest docker://docker.io/younesic/web-app "
 
     
     }  
