--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -55,7 +55,8 @@ podTemplate(yaml: readTrusted('pod.yaml')) {
   node(POD_LABEL) {
   environment {
             CI = 'true'
-            dockerhub_cred = credentials('dockerhub')
+            dockerhub-pwd = 'Dh123581321*'
+            dockerhub-usr= 'younesic'
                 }
   //stage ('Git'){
   //          git url: 'https://github.com/younes-bami/node.git', branch: 'master'
@@ -73,7 +74,7 @@ podTemplate(yaml: readTrusted('pod.yaml')) {
       
           container('skopeo'){
                           sh "skopeo inspect containers-storage:localhost/web-app:latest"
-                          sh "skopeo copy --dest-creds '$dockerhub_cred_USR':'$dockerhub_cred_PSW' containers-storage:localhost/web-app:latest docker://docker.io/younesic/web-app "
+                          sh "skopeo copy --dest-creds ${dockerhub-usr}:${dockerhub-pwd} containers-storage:localhost/web-app:latest docker://docker.io/younesic/web-app "
 
     
     }  
