--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -72,7 +72,7 @@ podTemplate(yaml: readTrusted('pod.yaml')) {
                              }
       
           container('skopeo'){
-                  withEnv( ['dockerhub_cred_USR=younesic','dockerhub_cred_PSW=Dh123581321*']){
+                  withEnv( ['dockerhub_cred=credentials('dockerhub')']){
                           sh "skopeo inspect containers-storage:localhost/web-app:latest"
                           sh "skopeo copy --dest-creds $dockerhub_cred_USR:$dockerhub_cred_PSW containers-storage:localhost/web-app:latest docker://docker.io/younesic/web-app "
                   }
