--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -55,7 +55,7 @@ podTemplate(yaml: readTrusted('pod.yaml')) {
   node(POD_LABEL) {
   environment {
             CI = 'true'
-           
+            dockerhub_cred = credentials('dockerhub')
                 }
   //stage ('Git'){
   //          git url: 'https://github.com/younes-bami/node.git', branch: 'master'
@@ -72,10 +72,10 @@ podTemplate(yaml: readTrusted('pod.yaml')) {
                              }
       
           container('skopeo'){
-                  withEnv( ['dockerhub_cred=credentials('dockerhub')']){
+                          sh "env"
                           sh "skopeo inspect containers-storage:localhost/web-app:latest"
                           sh "skopeo copy --dest-creds $dockerhub_cred_USR:$dockerhub_cred_PSW containers-storage:localhost/web-app:latest docker://docker.io/younesic/web-app "
-                  }
+
     
     }  
     }
