--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -54,7 +54,7 @@ podTemplate(yaml: readTrusted('pod.yaml')) {
 
   node(POD_LABEL) {
   environment {
-            CI = 'true'
+            CI = 'true',
             dockerhub_cred = credentials('dockerhub')
                 }
   //stage ('Git'){
