--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -69,9 +69,8 @@ podTemplate(yaml: readTrusted('pod.yaml')) {
                              }
       
           container('skopeo'){
-                          sh "env"
                           sh "skopeo inspect containers-storage:localhost/web-app:latest"
-                          sh "skopeo copy --dest-creds $dockerhub_cred_USR:$dockerhub_cred_PSW containers-storage:localhost/web-app:latest docker://docker.io/younesic/web-app "
+                          sh "skopeo copy --dest-creds $DOCKERHUB_USR:$DOCKERHUB_PWD containers-storage:localhost/web-app:latest docker://docker.io/younesic/web-app "
 
     
     }  
