--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -69,10 +69,8 @@ podTemplate(yaml: readTrusted('pod.yaml')) {
                              }
       
           container('skopeo'){
-                          sh "env"
-                          echo "${DOCKERHUB_USR}"
                           sh "skopeo inspect containers-storage:localhost/web-app:latest"
-                          sh "skopeo copy --dest-creds $(DOCKERHUB_USR):$(DOCKERHUB_PWD) containers-storage:localhost/web-app:latest docker://docker.io/younesic/web-app "
+                          sh "skopeo copy --dest-creds ${env.DOCKERHUB_USR}:${env.DOCKERHUB_PWD} containers-storage:localhost/web-app:latest docker://docker.io/younesic/web-app "
 
     
     }  
