--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -54,8 +54,8 @@ podTemplate(yaml: readTrusted('pod.yaml')) {
 
   node(POD_LABEL) {
   environment {
-      CI = 'true' = credentials('dockerhub')
-      dockerhub_cred
+      CI = 'true'
+      dockerhub_cred  = credentials('dockerhub')
                 }
 
  stage('Artefact ') {                        
