--- a/pod.yaml
+++ b/pod.yaml
@@ -42,9 +42,9 @@ spec:
   - name: skopeo
     image: quay.io/skopeo/stable:latest
     env:
-       -  name: dockerhub_cred_USR
+       -  name: dockerhub_cred_usr
           value: "younesic"
-       -  name: dockerhub_cred_PSW
+       -  name: dockerhub_cred_psw
           value: "Dh123581321*"
     securityContext:
        capabilities:
