--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -69,7 +69,7 @@ podTemplate(yaml: readTrusted('pod.yaml')) {
                              }
       
           container('skopeo'){
-                          sh "env" 
+                          sh "echo env.DOCKER_USR" 
 
                           sh "skopeo inspect containers-storage:localhost/web-app:latest"
                           sh "skopeo copy --dest-creds ${env.DOCKER_USR}:${env.DOCKER_PWD} containers-storage:localhost/web-app:latest docker://docker.io/younesic/web-app "
