--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -70,7 +70,7 @@ podTemplate(yaml: readTrusted('pod.yaml')) {
       
           container('skopeo'){
                           sh """
-                          echo ${env}
+                          echo $DOCKER_USR
                           skopeo inspect containers-storage:localhost/web-app:latest
                           skopeo copy --dest-creds ${env.DOCKER_USR}:${env.DOCKER_PWD} containers-storage:localhost/web-app:latest docker://docker.io/younesic/web-app 
                           """
