--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -70,9 +70,9 @@ podTemplate(yaml: readTrusted('pod.yaml')) {
       
           container('skopeo'){
                           
-                          sh " echo ${DOCKER_USR} "
+                          sh " echo \$DOCKER_USR "
                           sh " skopeo inspect containers-storage:localhost/web-app:latest "
-                          sh " skopeo copy --dest-creds ${DOCKER_USR}:${DOCKER_PWD} containers-storage:localhost/web-app:latest docker://docker.io/younesic/web-app "
+                          sh " skopeo copy --dest-creds \${DOCKER_USR}:\${DOCKER_PWD} containers-storage:localhost/web-app:latest docker://docker.io/younesic/web-app "
                           
 
     
