--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -55,14 +55,15 @@ podTemplate(yaml: readTrusted('pod.yaml')) {
   node(POD_LABEL) {
   environment {
       CI = 'true'
+      dockerhub = credentials('dockerhub')
                 }
 
  stage('Artefact ') {                        
            container('buildah'){
                             git url: 'https://github.com/younes-bami/node.git', branch: 'master'
-
+                            sh "\$dockerhub_USR"
                             sh "cd /home/jenkins/agent/workspace/${env.JOB_BASE_NAME}"
-                            //sh "buildah build --layers=true  -t web-app:latest ."
+                            sh "buildah build --layers=true  -t web-app:latest ."
       
                             
 
