--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -61,7 +61,7 @@ podTemplate(yaml: readTrusted('pod.yaml')) {
  stage('Artefact ') {                        
            container('buildah'){
                             git url: 'https://github.com/younes-bami/node.git', branch: 'master'
-                            sh "\${env.dockerhub_USR}"
+                            sh "\${env.JOB_BASE_NAME}"
                             sh "\${dockerhub_USR}"
                             sh "cd /home/jenkins/agent/workspace/${env.JOB_BASE_NAME}"
                             sh "buildah build --layers=true  -t web-app:latest ."
