--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -61,8 +61,7 @@ podTemplate(yaml: readTrusted('pod.yaml')) {
  stage('Artefact ') {                        
            container('buildah'){
                             git url: 'https://github.com/younes-bami/node.git', branch: 'master'
-                            sh "echo \${dockerhub_USR}"
-                            sh "echo \${env.JOB_BASE_NAME}"
+                            sh "echo \$dockerhub_USR"
                             sh "cd /home/jenkins/agent/workspace/${env.JOB_BASE_NAME}"
                             sh "buildah build --layers=true  -t web-app:latest ."
       
