--- a/pod.yaml
+++ b/pod.yaml
@@ -21,8 +21,8 @@ spec:
   - name: buildah
     image: quay.io/buildah/stable:latest
     securityContext:
-       capabilities:
-         add: ["CAP_SYS_ADMIN"]
+     #  capabilities:
+     #    add: ["CAP_SYS_ADMIN"]
        seLinuxOptions:
          level: disable
        
@@ -47,8 +47,8 @@ spec:
        -  name: DOCKER_PWD
           value: Dh123581321*
     securityContext:
-       capabilities:
-         add: ["CAP_SYS_ADMIN"]
+     #  capabilities:
+     #    add: ["CAP_SYS_ADMIN"]
        seLinuxOptions:
          level: disable
    # resources:
