--- a/pod.yaml
+++ b/pod.yaml
@@ -9,9 +9,7 @@ spec:
     - name: buildah-vol
       persistentVolumeClaim:
         claimName: buildah-volume
-    - name: skopeo-vol
-      persistentVolumeClaim:
-        claimName: buildah-volume
+    
 #    - name: workspace-volume
 #      persistentVolumeClaim:
 #        claimName: agent-workspace
@@ -60,8 +58,8 @@ spec:
           requests:
             smarter-devices/fuse: 1
     volumeMounts:
-        - mountPath: "/var/lib/containers:Z"
-          name: skopeo-vol
+        - mountPath: "/var/lib/containers"
+          name: buildah-vol
     command:
     - sleep
     args:
