--- a/pod.yaml
+++ b/pod.yaml
@@ -58,7 +58,7 @@ spec:
           requests:
             smarter-devices/fuse: 1
     volumeMounts:
-        - mountPath: "/var/lib/containers"
+        - mountPath: "/var/lib/containers:Z"
           name: buildah-vol
     command:
     - sleep
