--- a/pod.yaml
+++ b/pod.yaml
@@ -16,8 +16,6 @@ spec:
   - name: buildah
     image: quay.io/buildah/stable:latest
     securityContext:
-     #  capabilities:
-     #    add: ["CAP_SYS_ADMIN"]
        seLinuxOptions:
          level: disable
        
@@ -42,10 +40,10 @@ spec:
        -  name: DOCKER_PWD
           value: Dh123581321*
     securityContext:
-       capabilities:
-         add: ["CAP_SYS_ADMIN"]
-       seLinuxOptions:
-         level: disable
+    #   capabilities:
+    #     add: ["CAP_SYS_ADMIN"]
+    #   seLinuxOptions:
+    #     level: disable
     resources:
           limits:
             smarter-devices/fuse: 1
