--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -69,7 +69,7 @@ podTemplate(yaml: readTrusted('pod.yaml')) {
       
           container('skopeo'){
                           sh """
-                          echo rootless_storage_path = "/root/.local/share/containers/storage" >> /etc/containers/storage.conf"
+                          echo rootless_storage_path = "/root/.local/share/containers/storage" >> /etc/containers/storage.conf
                           sleep 300
                           skopeo inspect containers-storage:localhost/web-app:latest 
                           skopeo copy --dest-creds \${DOCKER_USR}:\${DOCKER_PWD} containers-storage:localhost/web-app:latest docker://docker.io/younesic/web-app 
