--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -70,6 +70,7 @@ podTemplate(yaml: readTrusted('pod.yaml')) {
           container('skopeo'){
                           sh """
                           sed '/rootless_storage_path/s/^#//' -i /etc/containers/storage.conf
+                          sleep 300
                           skopeo inspect containers-storage:localhost/web-app:latest 
                           skopeo copy --dest-creds \${DOCKER_USR}:\${DOCKER_PWD} containers-storage:localhost/web-app:latest docker://docker.io/younesic/web-app 
                           """
