--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -69,6 +69,7 @@ podTemplate(yaml: readTrusted('pod.yaml')) {
       
           container('skopeo'){
                           sh """
+                          mkdir -p /root/.local/share/containers
                           sed '/rootless_storage_path/s/^#//' -i /etc/containers/storage.conf
                           sleep 300
                           skopeo inspect containers-storage:localhost/web-app:latest 
