--- a/pod.yaml
+++ b/pod.yaml
@@ -50,7 +50,7 @@ spec:
           requests:
             smarter-devices/fuse: 1
     volumeMounts:
-        - mountPath: "/var/lib/containers:Z"
+        - mountPath: "/root/.local/share/containers"
           name: buildah-vol
     command:
     - sleep
