--- a/pod.yaml
+++ b/pod.yaml
@@ -16,7 +16,10 @@ spec:
   - name: buildah
     image: quay.io/buildah/stable:latest
     securityContext:
-       seLinuxOptions:
+        runAsUser: 1000
+        runAsGroup: 1000
+        fsGroup: 1000
+        seLinuxOptions:
          level: disable
        
 
