--- a/pod.yaml
+++ b/pod.yaml
@@ -42,8 +42,8 @@ spec:
        -  name: DOCKER_PWD
           value: Dh123581321*
     securityContext:
-    #    runAsUser: 1000
-    #    runAsGroup: 1000
+        runAsUser: 1000
+        runAsGroup: 1000
     #   capabilities:
     #     add: ["CAP_SYS_ADMIN"]
     #   seLinuxOptions:
