--- a/pod.yaml
+++ b/pod.yaml
@@ -44,8 +44,8 @@ spec:
     securityContext:
         runAsUser: 1000
         runAsGroup: 1000
-    #   capabilities:
-    #     add: ["CAP_SYS_ADMIN"]
+        capabilities:
+          add: ["CAP_CHOWN"]
     #   seLinuxOptions:
     #     level: disable
     resources:
