--- a/pod.yaml
+++ b/pod.yaml
@@ -16,12 +16,8 @@ spec:
   - name: buildah
     image: quay.io/buildah/stable:latest
     securityContext:
-        runAsUser: 1000
-        runAsGroup: 1000
-#        seLinuxOptions:
-#         level: disable
-       
-
+        seLinuxOptions:
+         level: disable
     resources:
           limits:
             smarter-devices/fuse: 1
