--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -69,8 +69,8 @@ podTemplate(yaml: readTrusted('pod.yaml')) {
       
           container('skopeo'){
                           sh """
-                          mkdir -p $HOME/.config/containers
-                          cp $HOME/mycontainers/config/storage.conf $HOME/.config/containers
+                          mkdir -p /home/skopeo/.config/containers
+                          cp /home/skopeo/mycontainers/config/storage.conf /home/skopeo/.config/containers
                           sleep 3600
                           skopeo inspect containers-storage:localhost/web-app:latest 
                           skopeo copy --dest-creds \${DOCKER_USR}:\${DOCKER_PWD} containers-storage:localhost/web-app:latest docker://docker.io/younesic/web-app 
