--- a/pod.yaml
+++ b/pod.yaml
@@ -42,8 +42,8 @@ spec:
         runAsGroup: 1000
     #   capabilities:
     #     add: ["CAP_SYS_ADMIN"]
-    #   seLinuxOptions:
-    #     level: disable
+        seLinuxOptions:
+         level: disable
     resources:
           limits:
             smarter-devices/fuse: 1
