--- a/pod.yaml
+++ b/pod.yaml
@@ -16,10 +16,10 @@ spec:
   - name: buildah
     image: quay.io/buildah/stable:latest
     securityContext:
-        runAsUser: 1000
-        runAsGroup: 1000
-        capabilities:
-          add: ["CAP_SYS_ADMIN"]
+    #    runAsUser: 1000
+    #    runAsGroup: 1000
+    #    capabilities:
+    #      add: ["CAP_SYS_ADMIN"]
         seLinuxOptions:
          level: disable
     resources:
