--- a/pod.yaml
+++ b/pod.yaml
@@ -18,8 +18,8 @@ spec:
     securityContext:
         runAsUser: 1000
         runAsGroup: 1000
-    #    capabilities:
-    #      add: ["CAP_SYS_ADMIN"]
+        capabilities:
+          add: ["CAP_SYS_ADMIN"]
         seLinuxOptions:
          level: disable
     resources:
