--- a/pod.yaml
+++ b/pod.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Pod
 metadata: 
-  annotations: 
-      container.apparmor.security.beta.kubernetes.io/buildah: unconfined
-      container.apparmor.security.beta.kubernetes.io/skopeo: unconfined
+#  annotations: 
+#      container.apparmor.security.beta.kubernetes.io/buildah: unconfined
+#      container.apparmor.security.beta.kubernetes.io/skopeo: unconfined
 spec:
   volumes:
     - name: buildah-vol
@@ -16,12 +16,12 @@ spec:
   - name: buildah
     image: quay.io/buildah/stable:latest
     securityContext:
-        runAsUser: 1000
-        runAsGroup: 1000
+    #    runAsUser: 1000
+    #    runAsGroup: 1000
         capabilities:
           add: ["SYS_CHROOT"]
-        seLinuxOptions:
-         level: disable
+#        seLinuxOptions:
+#         level: disable
     resources:
           limits:
             smarter-devices/fuse: 1
