--- a/pod.yaml
+++ b/pod.yaml
@@ -19,7 +19,7 @@ spec:
     #    runAsUser: 1000
     #    runAsGroup: 1000
         capabilities:
-          add: ["CAP_SETUID,CAP_SETGID"]
+          add: ["SETUID,SETGID"]
 #        seLinuxOptions:
 #         level: disable
 #    resources:
