--- a/pod.yaml
+++ b/pod.yaml
@@ -19,7 +19,9 @@ spec:
     #    runAsUser: 1000
     #    runAsGroup: 1000
         capabilities:
-          add: ["SETUID,SETGID"]
+          add: 
+            - SETUID
+            - SETGID
 #        seLinuxOptions:
 #         level: disable
 #    resources:
