--- a/pod.yaml
+++ b/pod.yaml
@@ -57,7 +57,7 @@ spec:
     #      requests:
     #        smarter-devices/fuse: 1
     volumeMounts:
-        - mountPath: "/home/skopeo/mycontainers:Z"
+        - mountPath: "/home/skopeo/.local/share/containers/storage:Z"
           name: buildah-vol
     command:
     - sleep
