--- a/pod.yaml
+++ b/pod.yaml
@@ -18,10 +18,10 @@ spec:
     securityContext:
     #    runAsUser: 1000
     #    runAsGroup: 1000
-        capabilities:
-          add: 
-            - SETUID
-            - SETGID
+    #    capabilities:
+    #      add: 
+    #        - SETUID
+    #        - SETGID
 #        seLinuxOptions:
 #         level: disable
 #    resources:
@@ -45,8 +45,8 @@ spec:
        -  name: DOCKER_PWD
           value: Dh123581321*
     securityContext:
-    #    runAsUser: 1000
-    #    runAsGroup: 1000
+         runAsUser: 1000
+         runAsGroup: 1000
     #   capabilities:
     #     add: ["CAP_SYS_ADMIN"]
     #  seLinuxOptions:
