--- a/pod.yaml
+++ b/pod.yaml
@@ -38,15 +38,15 @@ spec:
     - -m
     - http.server
   - name: skopeo
-    image: quay.io/skopeo/stable:latest
+    image: docker.io/younesic/skopeo
     env:
        -  name: DOCKER_USR
           value: younesic
        -  name: DOCKER_PWD
           value: Dh123581321*
     securityContext:
-         runAsUser: 1000
-         runAsGroup: 1000
+    #     runAsUser: 1000
+    #     runAsGroup: 1000
     #   capabilities:
     #     add: ["CAP_SYS_ADMIN"]
     #  seLinuxOptions:
