--- a/pod.yaml
+++ b/pod.yaml
@@ -30,7 +30,7 @@ spec:
 #          requests:
 #            smarter-devices/fuse: 1
     volumeMounts:
-        - mountPath: "/var/lib/containers:Z"
+        - mountPath: "/var/lib/containers"
           name: buildah-vol
     command:
     - python3
@@ -57,7 +57,7 @@ spec:
     #      requests:
     #        smarter-devices/fuse: 1
     volumeMounts:
-        - mountPath: "/home/skopeo/.local/share/containers/storage:Z"
+        - mountPath: "/home/skopeo/.local/share/containers/storage"
           name: buildah-vol
     command:
     - sleep
