--- a/pod.yaml
+++ b/pod.yaml
@@ -47,8 +47,8 @@ spec:
     securityContext:
     #     runAsUser: 1000
     #     runAsGroup: 1000
-    #   capabilities:
-    #     add: ["CAP_SYS_ADMIN"]
+        capabilities:
+          add: ["SYS_CHROOT"]
     #  seLinuxOptions:
     #     level: disable
     #resources:
