--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -60,8 +60,13 @@ podTemplate(yaml: readTrusted('pod.yaml')) {
  stage('Artefact ') {                        
            container('buildah'){
                             git url: 'https://github.com/younes-bami/node.git', branch: 'master'
-                            sh "cd /home/jenkins/agent/workspace/${env.JOB_BASE_NAME}"
-                            sh "buildah build --layers=true  -t web-app:latest ."
+                            sh """
+                            cd /home/jenkins/agent/workspace/${env.JOB_BASE_NAME}
+                            buildah build --layers=true  -t web-app:latest .
+                            buildah images --all
+                            sleep 600
+                            """
+                            
       
                             
 
@@ -70,7 +75,7 @@ podTemplate(yaml: readTrusted('pod.yaml')) {
           container('skopeo'){
                           sh """
                           cd /home/skopeo
-                          sleep 3600 
+                          sleep 600 
                           skopeo inspect containers-storage:localhost/web-app:latest 
                           skopeo copy --dest-creds \${DOCKER_USR}:\${DOCKER_PWD} containers-storage:localhost/web-app:latest docker://docker.io/younesic/web-app 
                           """
