--- a/pod.yaml
+++ b/pod.yaml
@@ -30,7 +30,7 @@ spec:
 #          requests:
 #            smarter-devices/fuse: 1
     volumeMounts:
-        - mountPath: "/home/skopeo/.local/share/containers"
+        - mountPath: "/home/buildah/.local/share/containers"
           name: buildah-vol
     command:
     - python3
