--- a/pod.yaml
+++ b/pod.yaml
@@ -47,8 +47,8 @@ spec:
     securityContext:
     #     runAsUser: 1000
     #     runAsGroup: 1000
-        capabilities:
-          add: ["SYS_CHROOT"]
+    #    capabilities:
+    #      add: ["SYS_CHROOT"]
     #  seLinuxOptions:
     #     level: disable
     #resources:
