--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -61,6 +61,8 @@ podTemplate(yaml: readTrusted('pod.yaml')) {
            container('buildah'){
                             git url: 'https://github.com/younes-bami/node.git', branch: 'master'
                             sh """
+                            env
+                            sleep 300
                             cd /home/jenkins/agent/workspace/${env.JOB_BASE_NAME}
                             buildah build --layers=true  -t web-app:latest .
                             buildah images --all
