--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -61,8 +61,7 @@ podTemplate(yaml: readTrusted('pod.yaml')) {
            container('buildah'){
                             git url: 'https://github.com/younes-bami/node.git', branch: 'master'
                             sh """
-                            echo \${PWD}
-                            cd $PWD
+                            cd \${PWD}
                             buildah build --layers=true  -t web-app:latest .
                             buildah images --all
                             """ 
