--- a/pod.yaml
+++ b/pod.yaml
@@ -18,7 +18,7 @@ spec:
   - name: jnlp
     image: jenkins/inbound-agent:latest
     volumeMounts:
-      - mountPath: 
+      - mountPath: /home/jenkins/agent
         name: jnlp-vol
 
   - name: node
