troubleshhot jenkins agent volume

--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -32,6 +32,7 @@ node(POD_LABEL) {
     stage ('Build'){
             container('node'){
 			            sh '''
+                  sleep 3600
 			            npm install
                   '''
                              }
